<resources>
    <string name="app_name">Online Shop</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="hello">Masukkan nama dan password</string>
    <string name="btnAddtxt">Add</string>
    <string name="namaLabel">Nama</string>
    <string name="hobiLabel">password</string>
    <string name="nomorLabel">No.</string>
    <string name="btnGetRow">Get</string>
    <string name="btnUpdateRow">Update</string>
    <string name="ketUpdate">Sebelum mengubah data, pilih dulu  baris ke berapa data yang akan diubah</string>
    <string name="ketAmbilBaris">Update data pada baris ke</string>
    <string name="ketDelete">Tulis no. baris yang akan didelete, lalu klik tombol &quot; delete &quot;</string>
    <string name="btnDel">Delete</string>
</resources>